fix selection z-index

--- a/main.css
+++ b/main.css
@@ -117,4 +117,5 @@ body {
     background-color: #000;
     opacity: .5;
     width: 100%;
+    z-index: 200;
 }
